fix workspace dropdown overflow styles

--- a/app/src/styles/custom/custom.scss
+++ b/app/src/styles/custom/custom.scss
@@ -575,4 +575,11 @@ div.react-multi-email .multi-email-tag {
     overflow: auto;
     max-height: 400px;
   }
+
+  & .ant-dropdown-menu-item .ant-dropdown-menu-title-content {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 250px;
+  }
 }
